Initial steps for SSH support